# newton

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: quickstart.md
docs/features/: F001-brain-module.md  F002-heart-module.md  F003-cognitive-layer.md  F004-P1-foundation.md  F004-runtime.md  F005-context-engine.md  F006-event-bus.md  F007-metrics-growth.md  F008-memory-lifecycle.md  F009-async-subtasks.md  F010-memory-improvements.md  F011-skill-discovery.md  F018-agent-identity.md  F019-nous-website.md  INDEX.md
docs/research/: 001-foundations.md  (+16 more)
nous/: __init__.py  config.py  events.py  main.py  telegram_bot.py  utils.py
scripts/: seed_procedures.js
sql/: init.sql  seed.sql
tests/: conftest.py  test_abandoned_filtering.py  test_brain.py  test_builtin_tools.py  test_calibration.py  test_censors.py  test_cognitive_layer.py  test_compaction.py  test_compaction_phase2.py  test_compaction_phase3.py  test_context.py  test_context_quality.py  test_context_smart.py  test_database.py  test_decision_reviewer.py  test_dedup.py  test_deliberation.py  test_episodes.py  test_event_bus.py  test_fact_enhancements.py  test_facts.py  test_frame_tagged_encoding.py  test_frames.py  test_guardrails.py  test_heart.py  test_identity.py  test_identity_api.py  test_intent.py  test_mcp.py  test_models.py  test_monitor.py  test_noise_reduction.py  test_procedures.py  test_quality.py  test_recall_threshold.py  test_rest.py  test_runner.py  test_schedules.py  test_streaming.py  test_streaming_keepalive.py  (+12 more)
(+121 files in other folders)
